<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">GE_Client</string>
	<string name="app_version">V4.1.4</string>
	<string name="Act_list_dev">设备列表</string>
	<string name="Act_list_chn">设备控制</string>
	<string name="Act_play_view">播放视频</string>
	<string name="Act_set_video">视频参数</string>
	<string name="Act_set_encode">编码参数</string>
		
	<!-- channel activity -->
	<string name="chn_act_channelNum">通道 </string>
	<string name="cha_act_switchNum">开关 </string>
	<string name="text_channel">摄像机列</string>
	<string name="text_switch">网络开关</string>
	<string name="open_btn">打开</string>
	<string name="logout_btn">登出</string>
	<string name="refresh_btn">查询</string>
	<string name="set_btn">设置</string>
	<string name="ck_num">序号</string>
	<string name="ck_time">时间</string>
	<string name="ck_dev">设备ID</string>
	<string name="ck_value">测量值</string>
	
	<!-- ipconfig string-->	
	<string name="Act_add_dev">添加设备</string>
	<string name="edittext_user">登录用户:</string>
	<string name="edittext_pwd">登录密码:</string>
	<string name="edittext_addr">设备地址:</string>
	<string name="edittext_port">设备端口:</string>
	<string name="edittext_puid">P2P_ID:</string>
	<string name="edittext_nettype">网络类型：</string>
	<string name="text_logintcp">局域网</string>
	<string name="text_loginp2p">云登录</string>
	<string name="btn_save">保存</string>
	
	<!-- ip list activity -->	
	<string name="add_btn">添加设备</string>
	<string name="back_btn">退出应用</string>
	<string name="ipact_msg_initfailed">初始化失败！</string>
	<string name="ipact_msg_loginfailed">登录失败！</string>
	<string name="ipact_msg_other_error">其他错误！</string>
	<string name="ipact_msg_error_name">用户名错误！</string>
	<string name="ipact_msg_error_pwd">密码错误！ </string>
	<string name="ipact_msg_error_right">权限不够！</string>
	<string name="ipact_msg_error_channel">错误的通道号！ </string>
	<string name="ipact_msg_error_net">网络异常！ </string>	
	<string name="ipact_msg_getdevfailed">获取设备列表失败！</string>
	<string name="ipact_msg_deletesuc">删除成功！</string>
	
	<!-- play view string -->
	<string name="play_open_ing">正在缓冲。。。</string>
	<string name="play_open_failed">打开失败！确认输入信息和网络通畅。</string>
	
	<string name="list_btn">设备列表</string>
	<string name="exit_btn">退出</string>
	<string name="login_btn">登录</string>
	<string name="del_btn">删除</string>
	<string name="modify_btn">修改</string>
	<string name="code_btn">编码参数</string>
	<string name="video_btn">视频参数</string>
	<string name="tr_pal">PAL</string>
	<string name="tr_ntsc">NTSC</string>
	<string name="btn_yes">确认</string>
	<string name="btn_cancel">取消</string>
	<string name="delete_Warn">警告：确认删除会丢失所有的数据！</string>
	
	<string name="camera">相机</string>
	<string name="measurement">测控</string>
	<string name="switch_in">开关/入</string>
	<string name="switch_out">开关/出</string>
</resources>
