<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_layout_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:stretchColumns="*" >
    <TableRow
        android:id="@+id/tableTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:divider="#6495ED"  >	        
        <TextView
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:text="@string/ck_num"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ck_time"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ck_dev"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ck_value"
            android:textSize="15sp"
            android:textStyle="bold" />
	</TableRow>       
</TableLayout>